Add DNT/Data-Saver info to example page

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -37,6 +37,11 @@
         </header>
         <main class="mdl-layout__content">
             <div class="page-content">
+                <h4>Info</h4>
+                <p>${info}</p>
+
+                <br>
+
                 <h4>Links</h4>
 
                 <p>
