Improvements to request handling

--- a/example/res/index.html
+++ b/example/res/index.html
@@ -56,11 +56,19 @@
 
                 <br>
 
+                <p>
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" onclick="loadPage('./info.json')">
+                        <i class="material-icons">link</i> info.json
+                    </button>
+                </p>
+
+                <br>
+
                 <h4>Links to error pages</h4>
 
                 <p>
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" onclick="loadPage('./duplicate.html')">
-                        <i class="material-icons">link</i> Duplicate (Error 500)
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" onclick="loadPage('./error.html')">
+                        <i class="material-icons">link</i> Internal Server Error (code 500)
                     </button>
                 </p>
 
